@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-17T16:30:41Z",
+  "timestamp" : "2022-07-18T08:32:37Z",
   "count_outdated" : 245,
   "uniques_outdated" : 119,
-  "count" : 274,
+  "count" : 273,
   "uniques" : 136,
   "clones" : [
     {
       "timestamp": "2022-07-04T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
