@@ -1,3 +1,10 @@
+2022-07-18T08:32:37Z:
+* notice: last 14d: unq all: 5 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 119 245 / 136 274
+* notice: next accum: outdated-unq outdated-all / unq all: 119 245 / 136 273
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-04]
+
 2022-07-17T16:30:41Z:
 * notice: last 14d: unq all: 5 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 118 244 / 136 274
